Практика по mermaid

--- a/Calculator_Practice1/Calculator_Practice1.csproj
+++ b/Calculator_Practice1/Calculator_Practice1.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Degree3.cs" />
     <Compile Include="Calculator.cs" />
+    <Compile Include="Degree2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
